# demo-a2a-multi-agent

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  CHANGES.md  NOTES.md  README.md  REGISTRY_MIGRATION.md  TESTING.md  TROUBLESHOOTING.md  get_aspire_logs.py  multi-agents.code-workspace  pyrightconfig.json  skills-lock.json  test_backend.py
a2a_client/: Dockerfile  README.md  pyproject.toml  pyrightconfig.json
a2a_client/a2a_client/: __init__.py  __main__.py  client.py
a2a_registry/: Dockerfile  README.md  pyproject.toml  pyrightconfig.json
a2a_registry/a2a_registry/: __init__.py  __main__.py  app.py  models.py  store.py
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/tests/: __init__.py  test_api_endpoints.py
backend/webapp_backend/: __init__.py  agent_router.py  app.py  auth.py  config.py  deps.py  logging.py  models.py
backend/webapp_backend/api/: __init__.py  routes.py
backend/webapp_backend/clients/: __init__.py  a2a_client.py
backend/webapp_backend/schemas/: __init__.py  agents.py  messages.py
emergency_operator_agent/: Dockerfile  README.md  SSE_IMPROVEMENTS.md  TASK_ORCHESTRATION.md  pyproject.toml  pyrightconfig.json
emergency_operator_agent/emergency_operator_agent/: __init__.py  agent.py  agent_card.py  app.py  executor.py  repl.py  task_executor.py  task_orchestrator.py
game_news_agent/: .env.example  .http  Dockerfile  README.md  SKILLS.md  pyproject.toml  pyrightconfig.json  rawg_openapi_v3.json
game_news_agent/contracts/v1/: game_report_request.schema.json  game_report_response.schema.json  review_analysis_request.schema.json  review_analysis_response.schema.json
game_news_agent/game_news_agent/: __init__.py  agent.py  agent_card.py  app.py  executor.py  game_service.py  game_service_kiota.py  guard_rails.py  models.py  repl.py  review_analyzer.py
game_news_agent/rawg_kiota_client/: __init__.py  kiota-lock.json  pyproject.toml  rawg_client.py
game_news_agent/rawg_kiota_client/creator_roles/: creator_roles_get_response.py  creator_roles_request_builder.py
game_news_agent/rawg_kiota_client/creators/: creators_get_response.py  creators_request_builder.py
game_news_agent/rawg_kiota_client/developers/: developers_get_response.py  developers_request_builder.py
game_news_agent/rawg_kiota_client/games/: games_get_response.py  games_request_builder.py
game_news_agent/rawg_kiota_client/genres/: genres_get_response.py  genres_request_builder.py
game_news_agent/rawg_kiota_client/models/: developer.py  developer_single.py  game.py  game_added_by_status.py  game_esrb_rating.py  game_esrb_rating_name.py  game_esrb_rating_slug.py  game_person_list.py  game_platform_metacritic.py  game_platforms.py  game_platforms_platform.py  game_platforms_requirements.py  game_ratings.py  game_single.py  game_single_added_by_status.py  game_single_esrb_rating.py  game_single_esrb_rating_name.py  game_single_esrb_rating_slug.py  game_single_platforms.py  game_single_platforms_platform.py  game_single_platforms_requirements.py  game_single_ratings.py  game_single_reactions.py  game_store_full.py  genre.py  genre_single.py  movie.py  movie_data.py  parent_achievement.py  person.py  person_single.py  platform.py  platform_parent_single.py  platform_single.py  position.py  publisher.py  publisher_single.py  reddit.py  screen_shot.py  store.py  (+6 more)
game_news_agent/rawg_kiota_client/publishers/: publishers_get_response.py  publishers_request_builder.py
game_news_agent/rawg_kiota_client/stores/: stores_get_response.py  stores_request_builder.py
game_news_agent/rawg_kiota_client/tags/: tags_get_response.py  tags_request_builder.py
greetings_agent/: .env.example  Dockerfile  pyproject.toml
greetings_agent/greetings_agent/: __init__.py  __main__.py  agent.py  agent_card.py  app.py  executor.py  repl.py
group_agents/backend/: Dockerfile  pyproject.toml  pyrightconfig.json
group_agents/backend/group_chat_backend/: __init__.py  app.py  chat_manager.py  models.py
shared/: .gitignore  Dockerfile.agent  README.md  pyproject.toml  pyrightconfig.json
shared/shared/: __init__.py  mongodb_task_store.py  openai_session_helpers.py  openai_streaming.py  otel_config.py  peer_tools.py  phoenix_setup.py  registry_client.py  strands_streaming.py  traced_executor.py
shared/tests/: test_mongodb_task_store.py
starwars_agent/: .env.example  Dockerfile  README.md  pyproject.toml
starwars_agent/starwars_agent/: __init__.py  agent.py  agent_card.py  app.py  config.py  executor.py  models.py  search.py
starwars_agent/starwars_agent/data_pipeline/: __init__.py  embeddings.py  fandom_client.py  loader.py
starwars_agent/tests/: test_data_pipeline.py  test_fandom_client.py
tester_agent/: .env.example  Dockerfile  README.md  debug_registry.py  pyproject.toml
tester_agent/tester_agent/: __init__.py  agent.py  agent_card.py  app.py  executor.py  guard_rails.py  repl.py
weather_agent/: .env.example  .env.sample  Dockerfile  README.md  pyproject.toml
weather_agent/.kiota/: apimanifest.json  workspace.json
weather_agent/weather_agent/: __init__.py  agent.py  agent_card.py  app.py  executor.py  guard_rails.py  repl.py  tools.py  weather_service.py
weather_agent/weather_client/: api_client.py
weather_agent/weather_client/astronomy_json/: astronomy_get_response.py  astronomy_json_request_builder.py
weather_agent/weather_client/current_json/: current_get_response.py  current_json_request_builder.py
weather_agent/weather_client/forecast_json/: forecast_get_response.py  forecast_json_request_builder.py
weather_agent/weather_client/future_json/: future_get_response.py  future_json_request_builder.py
weather_agent/weather_client/history_json/: history_get_response.py  history_json_request_builder.py
weather_agent/weather_client/ip_json/: ip_json_request_builder.py
weather_agent/weather_client/marine_json/: marine_get_response.py  marine_json_request_builder.py
weather_agent/weather_client/models/: alerts.py  alerts_alert.py  astronomy.py  astronomy_astro.py  current.py  current_air_quality.py  current_condition.py  error400.py  ip.py  (+18 more)
(+171 files in other folders)
