[project]
name = "a2a-registry"
version = "0.1.0"
description = "A2A Agent Registry Service - Dynamic agent discovery and registration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "httpx",
  "a2a-sdk[all]",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
  "ruff",
  "pyright",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "T20", "SIM"]
ignore = []

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
