[project]
name = "game_news_agent"
version = "0.1.0"
description = "LangGraph-based gaming report generator with A2A integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[all]",
    "langgraph>=0.2.60",
    "langchain-core>=0.3.30",
    "langchain-openai>=0.2.15",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "shared",
]

[project.optional-dependencies]
dev = [
    "datamodel-code-generator>=0.26.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "datamodel-code-generator>=0.26.0",
    "ruff>=0.8.0",
]

[tool.uv.sources]
shared = { path = "../shared", editable = true }

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
