[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for multi-agent interoperability"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "a2a-sdk[all]",
  "openai-agents",
  "httpx",
  "pymongo",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-instrumentation-fastapi",
  "opentelemetry-instrumentation-httpx",
  "opentelemetry-instrumentation-logging",
  "opentelemetry-exporter-otlp-proto-grpc",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
  "ruff",
  "pytest",
  "pytest-asyncio",
  "testcontainers[mongodb]",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "CPY",
  "D417",
  "D418",
  "D419",
  "DOC",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",      # Allow assert in tests
  "PLR2004",   # Allow magic values in tests
  "ANN",       # Less strict type annotations in tests
  "D",         # Less strict docstrings in tests
  "SLF001",    # Allow private member access in tests
]
