[project]
name = "tester-agent"
version = "0.1.0"
description = "Tester agent for exercising other A2A agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "a2a-sdk[all]",
  "openai-agents",
  "fastapi",
  "uvicorn",
  "httpx",
  "shared"
]

[tool.uv]
package = true

[tool.uv.sources]
shared = { path = "../shared" }

[dependency-groups]
dev = [
  "ruff",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "CPY",
  "D417",
  "D418",
  "D419",
  "DOC",
]
