[project]
name = "weather-agent"
version = "0.1.0"
description = "Weather + Air Quality A2A Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "a2a-sdk[all]",
  "openai-agents",
  "fastapi",
  "uvicorn",
  "httpx",
  "shared",
  "microsoft-kiota-abstractions>=1.9.9",
  "microsoft-kiota-http>=1.9.9",
  "microsoft-kiota-serialization-json>=1.9.9",
  "microsoft-kiota-serialization-text>=1.9.9",
  "microsoft-kiota-serialization-form>=1.9.9",
  "microsoft-kiota-serialization-multipart>=1.9.9",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["weather_agent*", "weather_client*"]

[tool.uv.sources]
shared = { path = "../shared", editable = true }

[dependency-groups]
dev = [
  "ruff",
]

[tool.ruff]
target-version = "py313"
exclude = ["weather_client"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "CPY",
  "D417",
  "D418",
  "D419",
  "DOC",
]
